Added Delete functionality from the Room Database.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Task Book</string>
     <string name="add_task">Add</string>
+    <string name="task_id">Task Id:</string>
+    <string name="task_title">Task Title:</string>
+    <string name="delete">Delete</string>
 </resources>
